# tracker-gg-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WEB_UI_README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  flaresolverr_client.py  main.py  pyproject.toml  requirements.txt  setup.sh  users.json
.claude/: settings.local.json
docs/: AI_AGENT_README.md  DOCKER.md
models/: database_models.py  db.py  tracker_models.py  valorant_model.py
scrapers/: analyze_selectors.py  test_parser.py  valorant_scraper.py
scripts/: analyze_network_calls.py  capture_network_requests.py  capture_with_flaresolverr.py  complete_api_capture.py  complete_grammar_api_test.py  extract_raw_json.py  setup_env.py  test_models_with_real_data.py  test_premier_api.py
src/: __main__.py
src/ai_agent/: __init__.py  anthropic_agent.py  mcp_server.py
src/expose/: api.py
src/expose/static/css/: style.css
src/expose/static/js/: app.js
src/expose/templates/: index.html
src/ingest/: browser_tracker.py  data_loader.py  enhanced_scraper.py  flaresolverr_client.py  improved_data_loader.py  scraper.py  startup_initializer.py  tracker-gg.py  tracker_gg.py  unified_data_loader.py  user_manager.py  valorant_scraper.py
src/shared/: database.py  models.py  utils.py
